<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent" android:layout_height="match_parent"
            tools:context=".Fragment.ShoppingItemFragment"
            android:background="@color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.v4.view.ViewPager
                android:id="@+id/shoppingItemViewPager"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="2"
                android:background="@color/grey"
                android:text="@string/hello_blank_fragment"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

            <TextView
                    android:id="@+id/shoppingItemTitleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="V Yaka Elbise"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/title"
            />

            <TextView
                    android:id="@+id/shoppingItemSubTitleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="sdfqsdflmskfdj"
                    android:textColor="@color/colorSubTitle"
                    android:textSize="@dimen/subTitle"
                    android:layout_below="@+id/shoppingItemTitleTV"/>

            <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/shareShoppingItemACIV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_upload"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>

            <TextView
                    android:id="@+id/shoppingItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="125.8 TRY"
                    android:textColor="@color/black"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/title"
                    android:layout_below="@+id/shoppingItemSubTitleTV"
                    android:layout_marginTop="20dp"
            />

            <TextView
                    android:id="@+id/shoppingItemTaksitTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSubTitle"
                    android:textSize="@dimen/subTitle"
                    android:layout_below="@+id/shoppingItemPrice"
                    tools:text="6*13 Tl'den baslayan takist ler"/>

            <LinearLayout
                    android:id="@+id/shoppingItemColorsRG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shoppingItemTaksitTV"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:button="@drawable/ic_circle_outline"
                        android:layout_marginRight="15dp"/>

                <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:button="@drawable/ic_circle_brown"
                        android:layout_marginRight="15dp"/>

                <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:button="@drawable/ic_circle_orange"
                        android:layout_marginRight="15dp"/>

                <RadioButton
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:button="@drawable/ic_circle_red"
                        android:layout_marginRight="15dp"/>
            </LinearLayout>


            <LinearLayout
                    android:id="@+id/shoppingItemSizesLL"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_below="@+id/shoppingItemColorsRG"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:checked="true"
                        android:textSize="15sp"
                        android:text="XS"
                        android:gravity="center"
                        android:textColor="@color/item_size_text_color_selector"
                        android:background="@color/item_size_background_selector"
                        android:layout_marginRight="15dp"/>

                <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:checked="true"
                        android:textSize="15sp"
                        android:text="S"
                        android:gravity="center"
                        android:textColor="@color/item_size_text_color_selector"
                        android:background="@color/item_size_background_selector"
                        android:layout_marginRight="15dp"/>

                <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:textSize="15sp"
                        android:text="M"
                        android:gravity="center"
                        android:textColor="@color/item_size_text_color_selector"
                        android:background="@color/item_size_background_selector"
                        android:layout_marginRight="15dp"/>

                <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:checked="true"
                        android:textSize="15sp"
                        android:text="L"
                        android:gravity="center"
                        android:textColor="@color/item_size_text_color_selector"
                        android:background="@color/item_size_background_selector"
                        android:layout_marginRight="15dp"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/productInfoTV"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"
                    android:drawableEnd="@drawable/ic_arrow_selector"
                    android:drawableRight="@drawable/ic_arrow_selector"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/title"
                    android:text="@string/urun_bilgisi"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"/>
            <TextView
                    android:id="@+id/productInfoDetailsTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/title"
                    android:text="@string/random_paragraph"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:visibility="gone"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_grey"/>
            <TextView
                    android:id="@+id/productDescTV"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"
                    android:drawableEnd="@drawable/ic_arrow_selector"
                    android:drawableRight="@drawable/ic_arrow_selector"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/title"
                    android:text="@string/urun_aciklamasi"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_grey"/>
            <TextView
                    android:id="@+id/productRet"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"
                    android:drawableEnd="@drawable/ic_arrow_selector"
                    android:drawableRight="@drawable/ic_arrow_selector"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/title"
                    android:text="@string/iade_degisim"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_grey"/>
            <TextView
                    android:id="@+id/productSize"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"
                    android:drawableEnd="@drawable/ic_arrow_selector"
                    android:drawableRight="@drawable/ic_arrow_selector"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/title"
                    android:text="@string/beden_tablosu"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_grey"/>
        </LinearLayout>


    </LinearLayout>


</ScrollView>